--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@
   background-color:white;
   min-width: 50%;
   min-height: 100%;
-
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .only-img{
